Fixed spacing

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,3 +11,6 @@
  {
     width: 100%;
  }
+ .flex-center {
+    padding: 50px 0;
+ }
